[add]header-layouts

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,8 @@
       <li><%#= link_to '  ', '#', class: 'glyphicon glyphicon-log-in' %></li>
       <li><%= link_to '  新規登録', new_user_registration_path, class: 'glyphicon glyphicon-log-in' %></li>
       <li><%= link_to '  ログイン', new_user_session_path, class: 'glyphicon glyphicon-log-in' %></li>
+      <li><%= link_to '  ログイン(管理者)', new_admin_session_path, class: 'glyphicon glyphicon-log-in' %></li>
+
   　<% end %>
   </ul>
 </nav>
