--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -4,7 +4,10 @@
 
 #logo {
 	font-family: 'Nothing You Could Do', cursive;
+	text-decoration: none;
+  	color: #4b4b4b;
 }
+
 
 body {
    margin: 0;
@@ -13,24 +16,30 @@ body {
    background-color: #ffffff;
 }
 
-header {
-	width: 100%;
-	padding: 20px 4% 10px;//header内側の余白
-	background-color: #fff;//背景色には白
-	top: 0;
-	display: flex;//header直下の子要素のレイアウト
-	align-items: center;//縦方向の中心
+
+.container {
+  padding-top: 0px; /*上部に余白を作る*/
 }
 
-header::after {
+
+a {
+  text-decoration: none;/*aタグの文字色と、余計なアンダーラインを消す*/
+  color: #4b4b4b;
+}
+
+.header {
+	width: 100%;
+	padding: 20px 4% 10px;/*header内側の余白*/
+	background-color: #009966;/*背景色*/
+	top: 0;
+	display: flex;/*header直下の子要素のレイアウト*/
+	align-items: center;/*縦方向の中心*/
+}
+
+.header::after {
 	content: "";
 	display: block;
 	clear: both;
-}
-
-
-.admin-header {
-  background-color: #ffffff;  //adminのヘッダー
 }
 
 
@@ -45,19 +54,36 @@ h1 {
 ul {
 	list-style: none;
 	margin: 0;
-	display: flex;//横並びに
+	display: flex;/*横並びに*/
 }
 
 li {
-	margin: 0 0 0 15px;//余白の調整
-	font-size: 16px;//文字の大きさ調整
+	margin: 0 0 0 15px;/*余白の調整*/
+	font-size: 16px;/*文字の大きさ調整*/
 }
 
-li mypicture {
-	margin: 0 0 1oopx 15px;//余白の調整
-}
 
 nav {
-	margin: 0 0 0 auto;//左マージンにauto
+	margin: 0 0 0 auto;/*左マージンにauto*/
+}
+
+
+
+
+
+.footer {
+	width: 100%;
+	padding: 20px 4% 10px;/*header内側の余白*/
+	background-color: rgba(0,0,0,0.8);
+	position: absolute;
+	bottom: 0;
+	display: flex;/*header直下の子要素のレイアウト*/
+	align-items: center;/*縦方向の中心*/
+
+
+}
+
+.footer span {
+	color:white;
 }
 
