--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,24 @@
-<h2>Sign up</h2>
+<h2>Sign up</h2>test
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+  <%= render "devise/shared/error_messages", resource: resource %>
+
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
+
+<!--
+  <div class="field">
+    <%#= f.label :郵便番号 %><br />
+    <%#= f.text_field :postal_code, autofocus: true%>
+  </div>
+
+　<div class="field">
+    <%#= f.label :住所 %><br />
+    <#= f.text_field :address, autofocus: true%>
+  </div> -->
 
   <div class="field">
     <%= f.label :password %>
@@ -26,4 +38,4 @@
   </div>
 <% end %>
 
-<%= render "users/shared/links" %>
+<%= render "devise/shared/links" %>
