--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,13 +29,14 @@
       </div>
     </div>
 
-    <div>
+    <div class="container">
       <%= yield %>
     </div>
 
-    <div class="footer">
-      <%= link_to '運営情報', '#' %>
-    </div>
+    <!--リスト作ってパーシャルでかく-->
+      <div class="footer">
+        <%= link_to '運営情報', '#' %>
+      </div>
 
   </body>
 </html>
