--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,2 +1,30 @@
-<h1>Admin::Users#index</h1>
-<p>Find me in app/views/admin/users/index.html.erb</p>
+<div class="row">
+
+	<table class="table">
+		<thead>
+			<tr>
+				<th>会員NO.</th>
+				<th>名前</th>
+				<th>メールアドレス</th>
+				<th>登録日</th>
+				<th>ステータス</th>
+			</tr>
+
+		</thead>
+
+		<tbody>
+			<% @users.each do |user| %>
+			<tr>
+				<td><%= user.name %></td>
+				<td><%= user.email %></td>
+				<td><%= user.is_deleted %></td>
+
+			</tr>
+			<% end %>
+
+		</tbody>
+
+	</table>
+
+
+</div>
