--- a/app/views/user/users/index.html.erb
+++ b/app/views/user/users/index.html.erb
@@ -1,2 +1,18 @@
-<h1>User::Users#index</h1>
-<p>Find me in app/views/user/users/index.html.erb</p>
+<div class="row">
+
+	<table class="table">
+		<thead>
+			<tr>
+				<th>会員NO.</th>
+				<th>名前</th>
+				<th>メールアドレス</th>
+				<th>登録日</th>
+				<th>ステータス</th>
+			</tr>
+
+		</thead>
+
+	</table>
+
+
+</div>
