--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,2 +1,16 @@
-<h1>Home#top</h1>
-<p>Find me in app/views/home/top.html.erb</p>
+<div class="row">
+
+
+
+		<!--bootstrap4　ブロックの中央寄せ-->
+		<div class="mx-auto">
+
+			<%= image_tag 'logo.png', :width => '700', :height => '700', :alt => 'logo' %>
+
+		</div>
+
+
+
+
+
+</div>
