--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Admin::Users#show</h1>
-<p>Find me in app/views/admin/users/show.html.erb</p>
+<!--ユーザーのマイページにも飛べるようにする-->
+<div class="row">
+
+<%= @user.name %>
+
+
+</div>
