--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -3,6 +3,8 @@
 
 
 		<!--bootstrap4　ブロックの中央寄せ-->
+		<!--リンク先追加-->
+		<!--使いたくなるようなUI,スライド説明-->
 		<div class="mx-auto">
 
 			<%= image_tag 'logo.png', :width => '700', :height => '700', :alt => 'logo' %>
