--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,9 @@
 
     <!--リスト作ってパーシャルでかく-->
       <div class="footer">
-        <%= link_to '運営情報', '#' %>
+        <span>運営情報</span>
+        <!--この書き方だと色が変わらないので修正必要-->
+        <span><%#= link_to '運営情報', '#' %></span>
       </div>
 
   </body>
