--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,11 +34,11 @@
     </div>
 
     <!--リスト作ってパーシャルでかく-->
-      <div class="footer">
+    <!--   <div class="footer">
         <span>運営情報</span>
-        <!--この書き方だと色が変わらないので修正必要-->
+        この書き方だと色が変わらないので修正必要
         <span><%#= link_to '運営情報', '#' %></span>
       </div>
-
+ -->
   </body>
 </html>
