--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -9,15 +9,15 @@
       　<li><%= "ようこそ、管理人さん！" %>
       </li>
 
-        <li><%= link_to '  会員一覧', admin_users_path, class: 'glyphicon glyphicon-log-in' %></li>
-          <li><%= link_to '  タグ一覧', admin_tags_path, class: 'glyphicon glyphicon-log-in' %></li>
+        <li><%= link_to '  会員一覧', manage_users_path, class: 'glyphicon glyphicon-log-in' %></li>
+          <li><%= link_to '  タグ一覧', manage_tags_path, class: 'glyphicon glyphicon-log-in' %></li>
         <li><%#= link_to '  使い方ガイド修正フォーム', home_about_path, class: 'glyphicon glyphicon-log-in' %></li>
-        <li><%= link_to '  掲示板一覧', admin_boards_path, class: 'glyphicon glyphicon-log-in' %></li>
+        <li><%= link_to '  掲示板一覧', manage_boards_path, class: 'glyphicon glyphicon-log-in' %></li>
 
         <!--虫眼鏡デザインにすること-->
-        <li><%= link_to '  検索窓', admin_search_search_path %></li>
+        <li><%= link_to '  検索窓', manage_search_search_path %></li>
 
-        <li><%= link_to '  ログアウト', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-in' %></li>
+        <li><%= link_to '  ログアウト', destroy_admin_session_path, method: :delete, class: 'glyphicon glyphicon-log-in' %></li>
 
       <% else %>
         <li><%#= link_to '  ', '#', class: 'glyphicon glyphicon-log-in' %></li>
