--- a/app/views/manage/users/show.html.erb
+++ b/app/views/manage/users/show.html.erb
@@ -46,7 +46,7 @@
 <div class="row">
 	<div class="col-xs-6 col-offset-6">
 
-		<%= link_to '編集する', edit_admin_user_path(@user), class: 'btn btn-default btn-primary' %>
+		<%= link_to '編集する', edit_manage_user_path(@user), class: 'btn btn-default btn-primary' %>
 
 		<hr />
 		<%= link_to '戻る', :back, class: 'btn btn-default btn-outline-dark' %>
