--- a/app/views/admins/shared/_links.html.erb
+++ b/app/views/admins/shared/_links.html.erb
@@ -2,13 +2,12 @@
   <%= link_to "Log in", new_session_path(resource_name) %><br />
 <% end %>
 
-<!--end_users/sign_inのページで表示されてしまうので、コメントアウトしました-->
-<%#- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%#= link_to "Sign up", new_registration_path(resource_name) %><br />
-<%# end %>
+<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+<% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "=> パスワードを忘れた方はこちら", new_password_path(resource_name) %><br />
+  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
