--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,24 +1,18 @@
-<h2>Sign up</h2>test
+<h2>Sign up</h2>会員ページ
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= render "users/shared/error_messages", resource: resource %>
 
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.email_field :name, autofocus: true, autocomplete: "name" %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-
-<!--
-  <div class="field">
-    <%#= f.label :郵便番号 %><br />
-    <%#= f.text_field :postal_code, autofocus: true%>
-  </div>
-
-　<div class="field">
-    <%#= f.label :住所 %><br />
-    <#= f.text_field :address, autofocus: true%>
-  </div> -->
 
   <div class="field">
     <%= f.label :password %>
@@ -38,4 +32,4 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= render "users/shared/links" %>
