--- a/app/views/public/boards/index.html.erb
+++ b/app/views/public/boards/index.html.erb
@@ -1,30 +1,33 @@
 <div class="row">
+  <div class="col-xs-8 col-xs-offset-2">
+  	  <h3>掲示板一覧</h3>
+  	<div class="text-right">
+		<%= link_to "+", new_public_board_path, class: " btn btn-dark", style: "border-radius: 50%" %>
+	</div>
 
 
+		<table class="table table-hover">
+			<thead>
+				<th>画像</th>
+				<th>ユーザー名</th>
+				<th>タイトル</th>
+				<th>投稿日時</th>
+				<th></th>
+			</thead>
+			<tbody>
+				<% @boards.each do |board| %>
+				<tr>
 
-		<h2>掲示板一覧</h2>
-		<table class="table" %>
-			<% @boards.each do |board| %>
-			<tr>
-				<thead>
-					<th>画像</th>
-					<th>ユーザー名</th>
-					<th>タイトル</th>
-					<th>投稿日時</th>
-					<th></th>
-				</thead>
-				<tbody>
-					<tr>
-						<td><%= attachment_image_tag(board.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '60x60') %></td>
-						<td><%= board.user.name %></td>
-						<td><%= board.title %></td>
-						<td><%= l board.created_at %></td>
-					</tr>
-				</tbody>
+					<td><%= attachment_image_tag(board.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '60x60') %></td>
+					<td><%= board.user.name %></td>
+					<td><%= board.title %></td>
+					<td><%= l board.created_at %></td>
+				</tr>
+				<% end %>
+			</tbody>
 
-
-			<% end %>
 		</table>
+		<%= paginate @boards %>
 	</div>
 
 </div>
