--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,12 +1,12 @@
-
 <% if obj.errors.any? %>
-    <div id="error_explanation">
-      <h3><%= pluralize(obj.errors.count, "error") %> prohibited this obj from being saved:</h3>
+  <div class="alert alert-danger" role="alert">
+    <!-- <div id="error_explanation"> -->
+      <strong><%= pluralize(obj.errors.count, "error") %> prohibited this obj from being saved:</strong>
 
       <ul>
       <% obj.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
-    </div>
+  </div>
 <% end %>
