--- a/app/views/public/boards/show.html.erb
+++ b/app/views/public/boards/show.html.erb
@@ -1,2 +1,21 @@
-<h1>Public::Boards#show</h1>
-<p>Find me in app/views/public/boards/show.html.erb</p>
+<div class="d-flex align-items-center mt-4 mb-4">
+  <div class="ml-auto boards__linkBox">
+<!--     <%#= link_to '一覧', boards_path, class: 'btn btn-outline-dark' %>
+    <%#= link_to '編集', edit_board_path(@board), class: 'btn btn-outline-dark' %> -->
+  </div>
+</div>
+
+<div class="board-show">
+  <div class="board-header">
+    <h4><%= @board.title %></h4>
+  </div>
+  <div class="board-body">
+    <p class="board-text"><%= simple_format(@board.body) %></p>
+    <p class="text-right font-weight-bold mr-10">
+    	<%= link_to public_user_path(@board.user) do %>
+	    	<%= @board.user.name %>
+	    	<%= attachment_image_tag @board.user.profile_image, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '40x40' %>
+    	<% end %>
+    </p>
+  </div>
+</div>
