--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,1 +1,6 @@
-user index
+ログインユーザー
+マイページ
+todolist
+
+
+<%= link_to 'マイプロフィール', public_user_path(current_user.id), class: 'btn btn-outline-success' %>
