--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -2,5 +2,7 @@
 マイページ
 todolist
 
+<!--サイドバー index,showページ共通-->
+
 
 <%= link_to 'マイプロフィール', public_user_path(current_user.id), class: 'btn btn-outline-success' %>
