--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,7 +1,9 @@
 user show プロフ
 グラフ
 
-<%= link_to 'マイページ', public_users_path %>
+<!--サイドバー index,showページ共通-->
+
+<%= link_to 'マイページ', public_users_path, class: 'btn btn-outline-success' %>
 
 
 
