--- a/app/views/public/boards/new.html.erb
+++ b/app/views/public/boards/new.html.erb
@@ -5,38 +5,9 @@
 
 
 	<h2>新規投稿</h2>
-		<%= form_with(model: @board, url:  public_boards_path, local: true) do |f| %>
 
-			<!--partial: 'shared/error_messages'だとエラーになる-->
-			<%= render 'shared/error_messages', obj: @board %>
-
-			<div class="field">
-				<%= f.label :タイトル %>
-				<%= f.text_field :title, class: 'form-control' %>
-			</div>
-
-			<div class="field">
-				<%= f.label :件名 %>
-				<%= f.text_field :subject, class: 'form-control' %>
-			</div>
-
-			<div class="field">
-				<%= f.label :本文 %>
-				<%= f.text_area :body, class: 'form-control' %>
-			</div>
-
-			<div class="field">
-				<%= f.attachment_field :image, placeholder: 'プロフィール画像', class: 'board-image-form' %>
-			</div>
-
-
-			<div class="action">
-				<%= f.submit '投稿する', class: 'form-control' %>
-			</div>
-
-
-
-		<% end %>
+	<!--投稿フォーム-->
+	<%= render 'form', board: @board %>
 	</div>
 
 </div>
