[fix]board_form/partial

--- a/app/views/public/boards/edit.html.erb
+++ b/app/views/public/boards/edit.html.erb
@@ -7,7 +7,7 @@
 	<h2>編集フォーム</h2>
 
 	<!--投稿フォームうまくいかない-->
-	<%= render 'form', board: @board %>
+	<%= render 'form', board: @board, obj: @board, controller_name: @name %>
 	</div>
 
 </div>
