[fix]partial form

--- a/app/views/public/boards/new.html.erb
+++ b/app/views/public/boards/new.html.erb
@@ -7,7 +7,7 @@
 	<h2>新規投稿</h2>
 
 	<!--投稿フォーム-->
-	<%= render 'form', board: @board %>
+	<%= render 'form', board: @board, obj: @board %>
 	</div>
 
 </div>
