--- a/app/views/public/boards/show.html.erb
+++ b/app/views/public/boards/show.html.erb
@@ -41,23 +41,30 @@
     <h4>質問に回答する</h4>
   </div>
 
-   <div class="answer-body">
-      <%= form_with(model: @board_comment, url: public_board_comments_path, local: true) do |f| %>
+<!--条件分岐で、boar_idの有無で判断しないと、エラーでshowのviewが見れない-->
+  <%# if params[:board_id] %>
 
-         <%#= f.hidden_field :board_id %>
+   <div class="answer-body">
+
+      <!--namespaceを使用する場合は、先頭に指定してあげる必要がある-->
+      <%= form_for([:public, @board, @board_comment], local: true) do |f| %>
+      <%#= form_with(model: [@board, @board_comment], url: public_board_board_comments_path,local: true) do |f| %>
+
+         <%= f.hidden_field :board_id %>
         <div class="form-group">
-          <%= f.text_area :board_comment, class: 'form-control', rows: 6 %>
+          <%= f.text_area :comment, class: 'form-control', rows: 6 %>
         </div>
 
 
         <div class="actions">
           <%= f.submit '送信する', class: 'btn btn-outline-info' %>
+
         </div>
 
       <% end %>
     </div>
 </div>
 
-
+<%# end %>
 
 
