--- a/app/assets/stylesheets/board.scss
+++ b/app/assets/stylesheets/board.scss
@@ -1,9 +1,29 @@
-.action {
-	margin-top: 30px;
+.actions {
+	margin-top: 40px;
+	margin-bottom: 100px;
 }
 
 /*掲示板フォームの画像投稿*/
 .board-image-form {
 	margin-top: 30px;
 }
+
+.board-show {
+	margin: 30px auto;
+	border: 3px solid black;
+	padding: 25px;
+	border-radius: 10px;
+}
+
+
+.board-body {
+	padding: 5px;
+	border: 2px solid gray; /*質問内容*/
+}
+
+.board-profile {
+	margin-top: 15px; /*質問の投稿者*/
+}
+
+
 
