--- a/app/views/public/boards/_form.html.erb
+++ b/app/views/public/boards/_form.html.erb
@@ -16,7 +16,7 @@
 
 	<div class="form-group">
 		<%= f.label :本文 %>
-		<%= f.text_area :body, class: 'form-control' %>
+		<%= f.text_area :body, class: 'form-control', rows: 8 %>
 	</div>
 
 	<div class="form-group">
@@ -25,7 +25,8 @@
 
 
 	<div class="actions">
-		<%= f.submit '投稿する', class: 'form-control' %>
+		<!--ボタンサイズ調整-->
+		<%= f.submit '投稿する', class: 'btn btn-outline-info form-control' %>
 	</div>
 
 <% end %>
