--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,20 +14,17 @@
     <!--ヘッダーをadminかユーザーログインかで切替表示-->
     <div class="header">
       <% if admin_signed_in? %>
-        <%= render 'layouts/admin_header' %>
+        <%= render 'shared/admin_header' %>
       <% else %>
-        <%= render 'layouts/header' %>
+        <%= render 'shared/header' %>
       <% end %>
     </div>
 
-    <div class="container">
-      <!--送ったフラッシュメッセージをページ上部に表示する-->
-      <div class="row">
-        <div class="col-xs-12">
-          <%= flash[:notice] %>
-        </div>
-      </div>
+
+    <div class="flash-message">
+      <%= render 'shared/flash' %>
     </div>
+
 
     <div class="container">
       <%= yield %>
