[[add]comment_form/partial

--- a/app/views/public/boards/show.html.erb
+++ b/app/views/public/boards/show.html.erb
@@ -35,21 +35,8 @@
 
   <div class="comments">
       <h4>コメント一覧</h4>
-      <%= @board_comment.comment %>
-      <%#= render 'board_comments/comments' %>
-
-
-      <% @board.board_comments.each do |comment| %>
-        <div class="comment-list">
-          <p><%= simple_format(comment.comment) %></p>
-          <div class="comment-bottom">
-            <span id="time"><%= l comment.created_at %></span>
-            <span><%= comment.user.name %>
-                  <%= attachment_image_tag(comment.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '40x40') %>
-            </span>
-          </div>
-        </div>
-      <% end %>
+      <!--namespaceを使用していることを忘れずに-->
+      <%= render 'public/board_comments/comments', board: @board %>
 
   </div>
 
