--- a/app/views/public/board_comments/_comments.html.erb
+++ b/app/views/public/board_comments/_comments.html.erb
@@ -1,14 +1,17 @@
-<% board.board_comments.each do |comment| %>
+<!--each_with_indexは回したときにそれぞれの要素が何番目か返してくれるメソッド-->
+<% board.board_comments.each_with_index do |comment, i| %>
   <div class="comment-list">
+
+  	<p>NO. <%= i + 1 %></p>
     <p><%= simple_format(comment.comment) %></p>
     <div class="comment-bottom">
       <span id="time"><%= l comment.created_at %></span>
       <span><%= comment.user.name %>
             <%= attachment_image_tag(comment.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '40x40') %>
       </span>
+
+
+
     </div>
   </div>
 <% end %>
-
-
-<h1>テスト</h1>
