--- a/app/views/public/board_comments/_comments.html.erb
+++ b/app/views/public/board_comments/_comments.html.erb
@@ -14,6 +14,26 @@
 	  <%= link_to '削除', public_board_comment_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
 	  <%#= link_to '編集', %>
 
+    <%#= render 'public/comment_likes/likes', board_comment: board_comment %>
+
+    <!--コメントいいね-->
+    <% if board_comment.comment_likes_by?(current_user) %>
+      <li>
+        <%= link_to '#', method: :delete do %>
+        <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+        <%= board_comment.likes.count %> いいね
+        <% end %>
+      </li>
+
+      <li>
+        <%= link_to '#', method: :delete do %>
+        <i class="fa fa-heart-o" aria-hidden="true"></i>
+        <%= board_comment.likes.count %> いいね
+        <% end %>
+      </li>
+      <% end %>
+
+
 
     </div>
   </div>
