--- a/app/views/public/board_comments/_comments.html.erb
+++ b/app/views/public/board_comments/_comments.html.erb
@@ -11,27 +11,34 @@
       </span>
 
       <%# binding.pry %>
-	  <%= link_to '削除', public_board_comment_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
+	  <%= link_to '削除', public_board_board_comments_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
 	  <%#= link_to '編集', %>
 
     <%#= render 'public/comment_likes/likes', board_comment: board_comment %>
 
-    <!--コメントいいね-->
-    <% if board_comment.comment_likes_by?(current_user) %>
+
+    <!--コメントいいね   問題箇所--------------------------------->
+    <% if board_comment.comment_liked_by?(current_user) %>
+    <%# binding.pry %>
       <li>
-        <%= link_to '#', method: :delete do %>
-        <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-        <%= board_comment.likes.count %> いいね
-        <% end %>
+        <%#= link_to public_board_board_comments_comment_likes_path(board.id), method: :delete do %>
+        <i class="fa fa-heart" aria-hidden="true" style="color: red;">いいね</i>
+        <%#= board_comment.likes.count %>
+        <%# end %>
       </li>
+    <% else %>
 
       <li>
-        <%= link_to '#', method: :delete do %>
-        <i class="fa fa-heart-o" aria-hidden="true"></i>
-        <%= board_comment.likes.count %> いいね
+        <%= link_to public_board_board_comments_comment_likes_path(board.id), method: :post do %>
+        <i class="fa fa-heart-o" aria-hidden="true">いいね</i>
+        <%= board_comment.comment_likes.count %>
         <% end %>
       </li>
-      <% end %>
+    <% end %>
+
+      <!--コメントいいね   問題箇所--------------------------------->
+
+       テスト<i class="fa fa-heart" aria-hidden="true" style="color: red;">いいね</i>
 
 
 
