--- a/app/views/public/board_comments/_comments.html.erb
+++ b/app/views/public/board_comments/_comments.html.erb
@@ -21,24 +21,22 @@
     <% if board_comment.comment_liked_by?(current_user) %>
     <%# binding.pry %>
       <li>
-        <%#= link_to public_board_board_comments_comment_likes_path(board.id), method: :delete do %>
+        <%= link_to public_board_board_comments_comment_likes_path(board.id), method: :delete do %>
         <i class="fa fa-heart" aria-hidden="true" style="color: red;">いいね</i>
-        <%#= board_comment.likes.count %>
-        <%# end %>
+        <%= board_comment.comment_likes.count %>
+        <% end %>
       </li>
     <% else %>
 
       <li>
-        <%= link_to public_board_board_comments_comment_likes_path(board.id), method: :post do %>
-        <i class="fa fa-heart-o" aria-hidden="true">いいね</i>
+        <%= link_to public_board_board_comments_comment_likes_path(board_comment.board_id), method: :post do %>
+
+        <i class="fa fa-heart-o" aria-hidden="true" style="color: red;">いいね</i>
         <%= board_comment.comment_likes.count %>
         <% end %>
       </li>
     <% end %>
 
-      <!--コメントいいね   問題箇所--------------------------------->
-
-       テスト<i class="fa fa-heart" aria-hidden="true" style="color: red;">いいね</i>
 
 
 
