--- a/app/views/public/boards/show.html.erb
+++ b/app/views/public/boards/show.html.erb
@@ -32,7 +32,10 @@
   <div class="comments">
       <h4>コメント一覧</h4>
       <!--namespaceを使用していることを忘れずに-->
-      <%= render 'public/board_comments/comments', board: @board, board_comment: @board_comment %>
+      <%#= render 'public/board_comments/comments', board: @board, board_comment: @board_comment %>
+
+      <!--one_commentと定義して試した-->
+      <%= render 'public/board_comments/comments', board: @board, one_comment: @one_comment %>
 
   </div>
 
