--- a/app/assets/stylesheets/board_comment.scss
+++ b/app/assets/stylesheets/board_comment.scss
@@ -33,10 +33,9 @@
   margin-top: 20px; /*cssが効いてない*/
 }
 
-.answer-form {
-  border-bottom: 4px solid gray;
+.comment-form {
   padding-bottom: 5px;
-
+  border-radius: 30px;/*cssが効いてない*/
 }
 
 li {
