--- a/app/views/public/boards/_form.html.erb
+++ b/app/views/public/boards/_form.html.erb
@@ -23,6 +23,27 @@
 		<%= f.attachment_field :image, placeholder: 'プロフィール画像', class: 'board-image-form' %>
 	</div>
 
+	<div class="form-group">
+    <span>タグ</span>
+    <!--多対多のアソシエーションの設定により、boardオブジェクトにtag_idsというプロパティが追加されており、
+    	このtag_idsにタグIDのリストを渡すことで、掲示板に複数のタグを紐づけることができる-->
+
+    <!--第二引数には、tagオブジェクトのリストを渡してる-->
+    <!--第三引数には、checkboxのvalueに渡すプロパティを指定している。ここでは第二引数で、tagオブジェクトを渡しているので、
+    	個々のtagオブジェクトのidの値がcheckboxのvalueにセットされる-->
+    <!--第四引数には、各チェックボックスのラベル名として、tagオブジェクトのnameプロパティの値をラベル名として指定している-->
+	    <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
+	      <div class="form-check">
+	        <%= tag.label class: 'form-check-label' do %>
+	        <!--tag.labelの中に、check_boxとtextを設定-->
+	          <%= tag.check_box class: 'form-check-input' %>
+	           <!--tag.textのtextは、先ほど、第四引数に指定したnameが表示される-->
+	          <%= tag.text %>
+	        <% end %>
+	      </div>
+	    <% end %>
+  	</div>
+
 
 	<div class="actions">
 		<!--ボタンサイズ調整-->
