--- a/app/views/manage/boards/index.html.erb
+++ b/app/views/manage/boards/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Admin::Boards#index</h1>
-<p>Find me in app/views/admin/boards/index.html.erb</p>
+<%= render 'public/boards/index', boards: @boards %>
+
+<!--削除して大丈夫なはず-->
