--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -101,3 +101,13 @@ nav {
 
 }
 
+
+.table-hover thead { /*全体のテーブルのthead色*/
+	background-color: #a9a9a9;/*灰色*/
+}
+
+.table-hover tbody { /*全体のテーブルbodyの色*/
+	background-color: white;
+}
+
+
