[add]Tag/fuction

--- a/app/views/manage/tags/edit.html.erb
+++ b/app/views/manage/tags/edit.html.erb
@@ -1,2 +1,13 @@
-<h1>Admin::Tags#edit</h1>
-<p>Find me in app/views/admin/tags/edit.html.erb</p>
+<div class='row'>
+	<div class='col-md-9 col-md-offset-3'>
+		<h3>タグ編集</h3>
+	</div>
+</div>
+
+<div class='row'>
+	<div class='col-md-offset-9'>
+
+		<%= render 'form', tag: @tag %>
+
+	</div>
+</div>
