--- a/app/views/manage/tags/new.html.erb
+++ b/app/views/manage/tags/new.html.erb
@@ -1,1 +1,13 @@
-タグ新規作成ページ
+<div class='row'>
+	<div class='col-md-9 col-md-offset-3'>
+		<h3>タグ追加</h3>
+	</div>
+</div>
+
+<div class='row'>
+	<div class='col-md-offset-9'>
+
+		<%= render 'form', tag: @tag %>
+
+	</div>
+</div>
