[fix]tag-layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import "base";
 @import "board";
 @import "board_comment";
+@import "tag";
 
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
