--- a/app/views/manage/tags/_form.html.erb
+++ b/app/views/manage/tags/_form.html.erb
@@ -12,6 +12,6 @@
 	</div>
 
 	<div class="actions">
-		<%= f.submit '追加', class: 'btn btn-primary' %>
+		<%= f.submit '変更', class: 'btn btn-outline-primary' %>
 	</div>
 <% end %>
