--- a/app/views/manage/tags/edit.html.erb
+++ b/app/views/manage/tags/edit.html.erb
@@ -1,11 +1,10 @@
-<!--サイドバー作成-->
 <!--ステータスを無効にしたら、掲示板追加の時に、タグ選択に現れない-->
 
 <div class='row'>
   <div class='col-md-3'>
   	<h3>編集画面</h3>
 
-	<div class="tag-form">
+	<div class="form-set">
 	  <div class="tag-heading">
 	    <h5>タグ編集</h5>
 	  </div>
@@ -25,7 +24,7 @@
 	  	<h3>タグ詳細</h3>
 
 	</div>
-  	<div class="tag-form">
+  	<div class="form-set">
   		<div class="tag-body">
   		  <p style="font-size:20px;">
   		  	<span class="label label-default">
