--- a/app/views/manage/tags/index.html.erb
+++ b/app/views/manage/tags/index.html.erb
@@ -2,7 +2,7 @@
   <div class='col-md-3'>
 	<h3>新規登録画面</h3>
 
-    <div class="tag-form">
+    <div class="form-set">
 	  <div class="tag-heading">
 	    <h5>タグ追加</h5>
 	  </div>
