--- a/app/assets/stylesheets/board_comment.scss
+++ b/app/assets/stylesheets/board_comment.scss
@@ -7,7 +7,14 @@
 .comments { /*コメント一覧枠*/
   margin-bottom: 80px;
   margin-top: 80px;
+
 }
+
+.board-heading {
+  margin-bottom: 50px;
+}
+
+
 
 .comment-list { /*コメントの仕切り*/
   padding: 15px;
