--- a/app/views/manage/tags/_form.html.erb
+++ b/app/views/manage/tags/_form.html.erb
@@ -12,6 +12,9 @@
 	</div>
 
 	<div class="actions">
-		<%= f.submit '変更', class: 'btn btn-outline-primary' %>
+		<div style="text-align:center;">
+			<%= f.submit '変更する', class: 'btn btn-outline-primary' %>
+		</div>
 	</div>
 <% end %>
+
