--- a/app/views/manage/tags/index.html.erb
+++ b/app/views/manage/tags/index.html.erb
@@ -1,21 +1,48 @@
 <div class='row'>
-  <div class='col-md-3'>
-	<h3>新規登録画面</h3>
+	<div class='col-md-3'>
+		<h3>新規登録画面</h3>
 
-    <div class="form-set">
-	  <div class="tag-heading">
-	    <h5>タグ追加</h5>
-	  </div>
-	  <div class="tag-body">
-		  <%= render 'form', tag: @tag, obj: @tag %>
-	  </div>
+		<div class="form-set">
+			<div class="tag-heading">
+				<h5>タグ追加</h5>
+			</div>
+			<div class="tag-body">
+				<%= render 'form', tag: @tag, obj: @tag %>
+			</div>
+		</div>
 	</div>
-  </div>
 
 
-  <div class="col-md-9">
-  	<%= render 'index', tags: @tags, obj: @tag %>
-  </div>
+	<div class="col-md-9">
+		<h3>タグ一覧</h3>
+		<div class="form-set">
+			<%#= render 'index', tags: @tags, obj: @tag %>
+			<table class="table table-hover">
+				<thead class="thead">
+					<th>タグID</th>
+					<th>タグ名</th>
+					<th>作成日時</th>
+					<th>ステータス</th>
+					<th></th>
+				</thead>
+				<tbody>
+					<% @tags.each do |tag| %>
+					<tr>
+						<td><%= tag.id %></td>
+						<td><%= link_to tag.name, edit_manage_tag_path(tag) %></td>
+						<td><%= l tag.created_at %></td>
+						<!--boolean型の日本語化、これでもok-->
+						<td><%= tag.is_void ? '無効' : '有効' %></td>
+						<td><%= link_to "変更", edit_manage_tag_path(tag), class: 'btn btn-outline-info', style: "border-radius: 50%" %></td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+
+			<%= paginate @tags %>
+
+		</div>
+	</div>
 
 </div>
 
