[fix]like_comment/function

--- a/app/views/public/board_comments/_comments.html.erb
+++ b/app/views/public/board_comments/_comments.html.erb
@@ -10,7 +10,7 @@
             <%= attachment_image_tag(comment.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '40x40') %>
       </span>
 
-	  <%= link_to '削除', public_board_board_comments_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
+	  <%= link_to '削除', public_board_board_comment_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
 	  <%#= link_to '編集', %>
 
     <%#= render 'public/comment_likes/likes', board_comment: board_comment %>
@@ -19,7 +19,7 @@
     <!--コメントいいね   問題箇所--------------------------------->
     <% if comment.comment_liked_by?(current_user) %>
       <li>
-        <%= link_to public_board_board_comments_comment_likes_path(comment.board.id), method: :delete do %>
+        <%= link_to public_board_board_comment_comment_likes_path(comment.board_id, comment.id), method: :delete do %>
         <i class="fa fa-heart" aria-hidden="true" style="color: red;">いいね</i>
         <%= comment.comment_likes.count %>
         <% end %>
@@ -27,7 +27,7 @@
     <% else %>
 
       <li>
-        <%= link_to public_board_board_comments_comment_likes_path(comment.board.id), method: :post do %>
+        <%= link_to public_board_board_comment_comment_likes_path(comment.board_id, comment.id), method: :post do %>
 
 
         <i class="fa fa-heart-o" aria-hidden="true" style="color: red;">いいね</i>
