--- a/app/views/public/board_comments/edit.html.erb
+++ b/app/views/public/board_comments/edit.html.erb
@@ -1,9 +1,11 @@
 <h3>編集画面</h3>
 
+<div class="text-right">
+  <p><%= link_to '戻る', public_boards_path, class: 'btn btn-outline-dark' %></p>
+</div>
+
 <div class="form-set">
-
-
-	<div class="form-group">
+	<div class="label-name">
 		<label class="label">ユーザー名</label>
 		<%= @board_comment.user.name %>
 		<%#= f.text_field :title, class: 'form-control' %>
@@ -20,7 +22,7 @@
 
 		<div class="actions">
 			<!--ボタンサイズ調整-->
-			<%= f.submit '投稿する', class: 'btn btn-outline-info form-control' %>
+			<%= f.submit '投稿する', class: 'btn btn-outline-info form-control' %><hr />
 			<%= link_to '戻る', public_boards_path, class: 'btn btn-outline-dark' %>
 		</div>
 	<% end %>
